# rotor-stream

./: .gitignore  .travis.yml  Cargo.toml  README.rst  index.html  search-index.js  vagga.yaml
examples/: fetch.rs  monitor.rs  serve.rs
mio/: struct.Events.html
net2/: trait.TcpListenerExt.html  trait.TcpStreamExt.html  trait.UdpSocketExt.html
net2/unix/: index.html  trait.UnixTcpBuilderExt.html  trait.UnixUdpBuilderExt.html
netbuf/: constant.MAX_BUF_SIZE.html  enum.RangeArgument.html  index.html  struct.Buf.html
rotor/: enum.Compose2.html  enum.SpawnError.html  enum.Void.html  enum.WakeupError.html  index.html  macro.rotor_compose!.html  struct.Config.html  struct.EarlyScope.html  struct.EventSet.html  struct.LoopCreator.html  struct.LoopInstance.html  struct.Notifier.html  struct.PollOpt.html  struct.Response.html  struct.Scope.html  struct.Time.html  struct.Timeout.html  struct.TimerError.html  trait.Evented.html  trait.GenericScope.html  trait.Machine.html
rotor/mio/: enum.IpAddr.html  enum.NotifyError.html  index.html  struct.EventLoop.html  struct.EventLoopConfig.html  struct.EventSet.html  struct.Events.html  struct.Io.html  struct.IoEvent.html  struct.Ipv4Addr.html  struct.Ipv6Addr.html  struct.Poll.html  struct.PollOpt.html  struct.Selector.html  struct.Sender.html  struct.Timeout.html  struct.TimerError.html  struct.Token.html  trait.Evented.html  trait.Handler.html  trait.TryAccept.html  trait.TryRead.html  trait.TryWrite.html  (+1 more)
rotor_stream/: constant.MAX_BUF_SIZE.html  enum.Accept.html  enum.Exception.html  enum.Expectation.html  index.html  sidebar-items.js  struct.Buf.html  struct.Intent.html  struct.IntentBuilder.html  struct.Persistent.html  struct.ProtocolStop.html  struct.Stream.html  struct.Transport.html  trait.Accepted.html  trait.ActiveStream.html  trait.Protocol.html  trait.SocketError.html  trait.StreamSocket.html
rotor_tools/: index.html
slab/: struct.SlabIter.html  struct.SlabMutIter.html
src/: accept.rs  errors.rs  extensions.rs  intention.rs  lib.rs  persistent.rs  protocol.rs  stream.rs  substr.rs  trait_impls.rs  transport.rs
(+245 files in other folders)
